--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -27,9 +27,17 @@
 \thispagestyle{empty}
 \clearpage
 \section{Introduction}
-Evidence abounds that regardless of ideological distance between partisan groups, the affective and social distance between Democrats and Republicans has expanded dramatically. American National Election Study (ANES) respondents' Net Partisan Affect---the difference between their in and out party feeling thermometer has steadily increased since the ANES began asking partisans to rate the Democratic and Republican parties on a scale from 0-100; 0 indicating complete coldness toward the party and 100 indicating total warmth . Partisans, it seems, consistently like their party, and increasingly \textit{dislike} the out-party \citep{iyengar2012affect}. 
+Evidence abounds that regardless of ideological distance between partisan groups, the affective and social distance between Democrats and Republicans has expanded dramatically. American National Election Study (ANES) respondents' Net Partisan Affect---the difference between their in and out party feeling thermometer has steadily increased since the ANES began asking partisans to rate the Democratic and Republican parties on a scale from 0-100; 0 indicating complete coldness toward the party and 100 indicating total warmth . Partisans, it seems, consistently like their party, and increasingly \textit{dislike} the out-party \citep{iyengar2012affect}.
 
-Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans \cite{iyengar2012affect, iyengar2018strengthening, abramowitz2010disappearing}. While it is true that \textit{mean} partisan affect---as measured by partisan feeling thermometers---has remained high, the standard deviation of this measure has increased substantially since 2004. By focusing on mean in-party feeling---rather than the distribution of partisan affect---researchers paint too optimistic a view of partisanship
+Recent developments give us cause, however, to doubt the consistency of in-party warmth. Using ANES time-series data, \cite{iyengar2018strengthening} finds that the strength of partisans out-party animus has supplanted in-party warmth as a predictor of voting behavior. The 2016 and 2020 election cycles have been characterized by lengthy and contentious primary elections. There has been no shortage of media accounts describing chaos at party conventions [CITE] and increasingly salient divides between populist and establishment wings of both parties [CITE].
+
+ Pundit portrayals of in-party dynamics have been supported by scholarship.
+%probs expand this section
+Using the 2016 Democratic primary \cite{wronski2018tale}
+%ask Dr. Bankert if okay to \cite{bankert2020authoritarian}
+
+
+Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans \citep{iyengar2012affect, iyengar2018strengthening, abramowitz2010disappearing}. While it is true that \textit{mean} partisan affect---as measured by partisan feeling thermometers---has remained high, the standard deviation of this measure has increased substantially since 2004. By focusing on mean in-party feeling---rather than the distribution of partisan affect---researchers paint too optimistic a view of partisanship
 
 
 
