reworked plots, added proportion below mct

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,3 +1,10 @@
+@misc{anescdf,
+  title={The 1948--2016 ANES Cumulative Data File},
+  author={American National Election Studies},
+  year={2017},
+  publisher={Stanford University and the University of Michigan}
+}
+
 @article{wronski2018tale,
   title={A Tale of Two Democrats: How Authoritarianism Divides the Democratic Party},
   author={Wronski, Julie and Bankert, Alexa and Amira, Karyn and Johnson, April A and Levitan, Lindsey C},
