--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -18,6 +18,7 @@
 %\usepackage{etoolbox}
 %\AtBeginEnvironment{quote}{\singlespacing\small}
 
+%"In New York, it isn't between Democrat and Republican, it's between top and down"
 \begin{document}
 
 \title{Not Homogeneous: Intra-party affect}
@@ -37,23 +38,7 @@ Using the 2016 Democratic primary \cite{wronski2018tale}
 %ask Dr. Bankert if okay to \cite{bankert2020authoritarian}
 
 
-Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans \citep{iyengar2012affect, iyengar2018strengthening, abramowitz2010disappearing}. While it is true that \textit{mean} partisan affect---as measured by partisan feeling thermometers---has remained high, the standard deviation of this measure has increased substantially since 2004. By focusing on mean in-party feeling---rather than the distribution of partisan affect---researchers paint too optimistic a view of partisanship
-
-
-
-\section{}
-
-
-
-\section{Extension to \citet{iyengar2012affect} }
-By using the difference between respondents' in and out-party feeling thermometers rather than the each individual scoresIyengar, Sood, and Lelkes' measure of Net Partisan Affect, runs the risk of obscuring meaningful changes in both out-party and in-party feeling. An increase in NPA can be observed \textit{either} when in-party feeling increases \textit{or} when out-party feeling decreases (and vice-versa). Similarly, partisans could become more hostile towards their political opponents, while NPA remained constant. These unfortunate characteristics of the NPA measure are becoming more problematic as partisans' feelings towards their own party become less consistent. While the authors' assertion that in-party feeling thermometers have, \textit{on average}, stayed quite warm is correct, the variation around that average has increased substantially.
-
-\begin{figure}[H]
-\center\includegraphics[width=5in]{cdf-sd.png}
-\caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
-\end{figure}
-
-Since 2004, partisans' feelings towards their own party have become less cohesive. This trend is less meaningful in regards to out-party feeling thermometers. While  the variance of out-party scores is similar in size to that of the in-party, out-party feeling thermometers have historically had high variance, particularly among Democrats.
+Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans \citep{iyengar2012affect, iyengar2018strengthening, abramowitz2010disappearing}. While it is true that \textit{mean} partisan affect---as measured by partisan feeling thermometers---has remained high, the standard deviation of this measure has increased substantially since 2004. By focusing on mean in-party feeling---rather than the distribution of partisan affect---researchers paint too optimistic a view of partisanship's strength. 
 
 Factions in both parties have received a great deal of attention in recent years. Groups like the Tea Party and alt-right in the Republican Party and progressives and socialists in the Democratic party have presented substantial challenges to their party's status-quo, often acting in opposition to their party's elites. Recent scholarship too has shown that affective divisions in the parties are both salient and predictive of other traits in partisans \citep{wronski2018tale, bankert2020authoritarian}. When the dependent variable in studies of polarization includes by default feelings towards the in-party, it becomes impossible to study how the effects of in-party feelings themselves have changed over time, or even to determine if they have any effect at all.
 
@@ -62,10 +47,43 @@ I hypothesize that, as partisans have become less consistent in their feelings t
 
 Further, I hypothesize that by controlling for in-party warmth, the modeled effect of cultural and economic attitudes will be more significant. When NPA is used as the dependent variable, the attitudes respondents who feel outside the ideological bounds of their party may cause them to report colder thermometers for both their in-party and out-party, which would not be detected by the NPA measure.
 
-\subsection{Data \& Methodology}
+\section{Data}
+
+The data from this study were taken from the American National Election Study Cumulative Data File \footnote{https://electionstudies.org/data-center/anes-time-series-cumulative-data-file/}. All data and replication materials will be made available on GitHub. The samples used here \textit{exclude} leaning partisans, despite the evidence that partisan leaning independents behave in much the same way as their sorted counterparts \citep{klar2016independent}. By restricting the sample to avowed partisans, I am likely underestimating the variation present in in-party attitudes, and overestimating the proportion of Democrat and Republican voters who are lukewarm or ambivalent towards their party. 
+
+\section{Results}
+
+\begin{figure}[H]
+\center\includegraphics[width=5in]{cdf-mean.png}
+\caption{\label{fig:cdf-mean} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
+\end{figure}
+
+Previous studies of affective polarization (e.g. \citet{iyengar2012affect}) have  focused on partisans' net partisan affect, this approach is problemmatic. When using a measure built from both in party and out party evaluations, it is not clear whether a change in NPA is borne of a change in in-party or out-party feeling. For example, the mean out-party affect of Republicans and Democrats in 2016 were each about 25 (Figure \ref{fig:cdf-mean}), but Republicans' NPA was significantly lower than Democrats' (Figure \ref{fig:cdf-npa}). Ostensibly, Republicans were \textit{less} polarized than Democrats, but to say so belies the fact that Republicans are very cold towards Democrats, they are just somewhat colder towards \textit{their own} party as well.
+\begin{figure}[H]
+\center\includegraphics[width=5in]{cdf-npa.png}
+\caption{\label{fig:cdf-npa} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
+\end{figure}
+Obscuring meaningful changes in both out-party and in-party feeling. An increase in NPA can be observed \textit{either} when in-party feeling increases \textit{or} when out-party feeling decreases (and vice-versa). Similarly, partisans could become more hostile towards their political opponents, while NPA remained constant. These unfortunate characteristics of the NPA measure are becoming more problematic as partisans' feelings towards their own party become less consistent. While the authors' assertion that in-party feeling thermometers have, \textit{on average}, stayed quite warm is correct, the variation around that average has increased substantially.
+
+\begin{figure}[H]
+\center\includegraphics[width=5in]{cdf-sd.png}
+\caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
+\end{figure}
+
+Since 2004, partisans' feelings towards their own party have become less cohesive. This trend is less meaningful in regards to out-party feeling thermometers. While  the variance of out-party scores is similar in size to that of the in-party, out-party feeling thermometers have historically had high variance, particularly among Democrats.
+
+\subsection{How Has the Distribution changed?}
+
+\begin{figure}[H]
+\center\includegraphics[width=5in]{cdf-below-med.png}
+\caption{\label{fig:cdf-below-med} \textit{\textbf{The proportion of partisans who whose in-party FT falls below the historical median (70).} Republicans and Democrats increasingly report feeling colder than the median. Republicans are particularly likely to }}
+\end{figure}
+
+To 
 
 
-\subsection{Results}
+
+
 
 
 \section{Conclusion}
