--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -63,7 +63,8 @@ Previous studies of affective polarization (e.g. \citet{iyengar2012affect}) have
 \center\includegraphics[width=5in]{cdf-npa.png}
 \caption{\label{fig:cdf-npa} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
 \end{figure}
-Obscuring meaningful changes in both out-party and in-party feeling. An increase in NPA can be observed \textit{either} when in-party feeling increases \textit{or} when out-party feeling decreases (and vice-versa). Similarly, partisans could become more hostile towards their political opponents, while NPA remained constant. These unfortunate characteristics of the NPA measure are becoming more problematic as partisans' feelings towards their own party become less consistent. While the authors' assertion that in-party feeling thermometers have, \textit{on average}, stayed quite warm is correct, the variation around that average has increased substantially.
+
+ An increase in NPA can be observed \textit{either} when in-party feeling increases \textit{or} when out-party feeling decreases (and vice-versa). Similarly, partisans could become more hostile towards their political opponents, while NPA remained constant. These unfortunate characteristics of the NPA measure are becoming more problematic as partisans' feelings towards their own party become less consistent. Indeed, we see increases in NPA (Fig. \ref{fig:cdf-npa}) even as mean in-party affect grows colder (Fig. \ref{fig:cdf-mean}).   Polarization implies mean in and out party affect diverging from one another; we observe instead partisans growing to dislike both parties---one at a faster rate than the other. 
 
 \begin{figure}[H]
 \center\includegraphics[width=5in]{cdf-sd.png}
@@ -76,7 +77,7 @@ Since 2004, partisans' feelings towards their own party have become less cohesiv
 
 \begin{figure}[H]
 \center\includegraphics[width=5in]{cdf-below-med.png}
-\caption{\label{fig:cdf-below-med} \textit{\textbf{The proportion of partisans who whose in-party FT falls below the historical median (70).} Republicans and Democrats increasingly report feeling colder than the median. Republicans are particularly likely to }}
+\caption{\label{fig:cdf-below-med} \textit{\textbf{The proportion of partisans who whose in-party FT falls below the historical median (70).} Republicans and Democrats increasingly report feeling colder than the median. Republicans are particularly likely to rate their party colder than median.}}
 \end{figure}
 
 To 
