writing/playing with income

--- a/doc/intra-party-affect.tex
+++ b/doc/intra-party-affect.tex
@@ -25,8 +25,9 @@
 \author{Robert Lytle}
 \date{\today}
 \maketitle
-\epigraph{I didn't get a thank you. That's OK. We sent him on the way, but I wasn't a fan of John McCain.}{\textit{Donald Trump}}
-\epigraph{``In New York, it isn't between Democrat and Republican---it's between top and bottom"}{\textit{Alexandria Ocasio-Cortez}}
+%\epigraph{I didn't get a thank you. That's OK. We sent him on the way, but I wasn't a fan of John McCain.}{\textit{Donald Trump}}
+\epigraph{Establishment power in Washington is not always centered around left versus right. Often, it’s about up versus down.}{\textit{Alexandria Ocasio-Cortez}}
+\epigraph{The beauty of the tea party movement is that it is independent and thus a true check and balance of the Republican and Democrat parties. It's not a pawn of the GOP, thus untouchable in criticism of the Democrats---I view it as an unattached conscience of the Republican party.}{\textit{Dana Loesch}}
 \setstretch{2}
 %\thispagestyle{empty}
 %\clearpage
